--- a/SCorona/index.html
+++ b/SCorona/index.html
@@ -32,7 +32,40 @@
             </div>
         </header>
 
-        <main class="main">Content</main>
+        <main class="main">
+            <section class="get-started">
+                <div class="get-started__container">
+                    <div class="get-started__content">
+                        <div class="get-started__block-text block-text">
+                            <h1 class="block-text__title block-text__title_blue">
+                                Take care of yours family’s <span>health</span>.
+                            </h1>
+                            <div class="block-text__text">
+                                All in one destination for COVID-19 health queries. 
+                                Consult 10,000+ health workers about your concerns.
+                            </div>
+                            <a href="" class="block-text__button button">GET STARTED</a>
+                        </div>
+                    </div>
+                    <div class="get-started__image">
+                        <img src="/img/mainBlockOne.svg" alt="image">
+                    </div>
+                    
+                    <div class="get-started__video">
+                        <a href="#" class="video-get-started">
+                            <div class="get-started__image">
+                                <img src="/img/play.png" alt="">
+                            </div>
+                            <div class="vidio-get-started__body">
+                                <div class="video-get-started__title">Stay safe with GoCorona</div>
+                                <div class="video-get-started__text">Wath Video</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </section>
+        </main>
+
         <footer class="footer">Footer</footer>
     </div>
 </body>
