--- a/SCorona/index.html
+++ b/SCorona/index.html
@@ -53,14 +53,39 @@
                     
                     <div class="get-started__video">
                         <a href="#" class="video-get-started">
-                            <div class="get-started__image">
-                                <img src="/img/play.png" alt="">
-                            </div>
                             <div class="vidio-get-started__body">
                                 <div class="video-get-started__title">Stay safe with GoCorona</div>
                                 <div class="video-get-started__text">Wath Video</div>
                             </div>
                         </a>
+                    </div>
+                </div>
+            </section>
+
+            <section class="stay-safe">
+                <div class="stay_save__container">
+                    <div class="stay-save__media ">
+                        <div class="media-stay-safe">
+                            <div class="media-stay-safe__image">
+                                <img src="/img/StaySave/mediaUI.png" alt="Приложение">
+                            </div>
+                            <div class="media-stay-save__item media-stay-save__item_1"></div>
+                            <div class="media-stay-save__item media-stay-save__item_2"></div>
+                            <div class="media-stay-save__item media-stay-save__item_3"></div>
+                        </div>
+                    </div>
+
+                    <div class="stay-save__content">
+                        <div class="stay-save__block-text block-text">
+                            <h2 class="block-text__title">
+                                Stay safe with Go<span>Corona</span>.
+                            </h2>
+                            <div class="block-text__text">
+                                24x7 Support and user friendly mobile platform to bring healthcare to your fingertips. 
+                                </br>Signup and be a part of the new health culture.
+                            </div>
+                            <a href="" class="block-text__button button">Features</a>
+                        </div>
                     </div>
                 </div>
             </section>
